Update PathClassPane.java
Support regex for filtering, code cleanup